# gammaeditor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Slot1.sav  build.rs  package.json
.github/workflows/: build.yml  check.yml  master.yml  release.yml
benches/: gvas_read.rs
exported/: Metagross.PK9  Volbeat.PK9
scraper/: dragonite.txt  list.txt  lower.py  scraper.py
src/: App.css  App.tsx  app.rs  lib.rs  macros.rs  main.rs
src-tauri/: .rust-analyzer.json  Cargo.toml  save.json  tauri.conf.json
src-tauri/exported/: Gardevoir.PK9  Swablu.PK9
src-tauri/src/: commands.rs  lib.rs  macros.rs  main.rs  property.rs
src-tauri/tests/: common.rs  party_attack_lists.rs  party_pokemon_ids.rs  party_pokemon_info.rs  party_pp_moves_lists.rs  party_shiny_list.rs  property.rs
src/components/: Box.tsx  Boxes.tsx  EmptySlot.tsx  MonDetails.tsx  MovesTest.tsx  Navbar.tsx  Party.tsx  PlayerPosition.tsx  Pokemon.tsx  Test.tsx  TrainerInfo.tsx  TrainerName.tsx
src/file/: mod.rs
src/logger/: mod.rs
src/model/: PlayerProps.ts  Pokemon.ts
src/pkmn/: ball.rs  gender.rs  mod.rs  natures.rs  stats.rs  types.rs
src/property/: traits.rs
src/save/: backup.rs  mod.rs  utils.rs
src/ui/: image.rs  mod.rs  party_screen.rs  screen.rs  single_screen.rs
src/utils/: custom_struct.rs  egui_tools.rs  generator.rs  listener.ts  mod.rs  useOnSaveLoad.ts
tests/: common.rs  main.rs  property.rs
tests/pokemon/: attack_lists.rs  caught_ball.rs  gender.rs  iv_struct.rs  mod.rs  pokemon_classes.rs  pokemon_id.rs  pokemon_info.rs  pp_moves_lists.rs  shiny_list.rs
(+70 files in other folders)
