[package]
name = "gammaeditor"
version = "0.1.0"
description = "A PkHex esque app for Gamma Engine games"
authors = ["CalRL"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["clock"] }
gvas = { version = "0.10.0", features = ["serde"] }
indexmap = "2.11.3"
env_logger = "0.11.8"

egui = "0.32.1"
egui-wgpu = { version = "0.32.1", features = ["winit"] }
egui-winit = "0.32.1"
winit = "0.30.12"
pollster = "0.4.0"

rfd = { version = "0.15.4" }
image = "0.25.8"

[dev-dependencies]
ordered-float = { version = "4.6.0"}

