[package]
name = "gammaeditor"
version = "0.1.0"
description = "A PkHex esque app for Gamma Engine games"
authors = ["CalRL"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["clock"] }
gvas = { version = "0.10.0", features = ["serde"] }
indexmap = "2.11.3"
eframe = "0.33.0"
egui = { version =  "0.33.0" }
egui_extras = { version = "0.33.0", features = ["all_loaders"]}
rfd = { version = "0.15.4" }
rust-embed="8.9.0"
image = { version = "0.25.8" }

[dev-dependencies]
ordered-float = { version = "4.6.0"}
criterion = "0.7.0"

[[bench]]
name = "gvas_read"
harness = false
